--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -8,7 +8,7 @@ parts:
   numbered: false
   chapters:
   - file: llm-defined
-  - file: llm-use-cases
+  - file: choosing_models
 - caption: OpenAI
   numbered: false
   chapters:
