--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -7,17 +7,7 @@ python-dotenv
 myst_nb
 leafmap
 ipyleaflet
-requests
-# faiss-cpu
-# opeanai-whisper
-wave
-pyaudio
-transformers
 pandas
+polars
 pyarrow
-bs4
-langchain
-chromadb
 tiktoken
-pypdf
-lark>=1.1.5
