--- a/openai-helper/openaihelper/data/config.yml
+++ b/openai-helper/openaihelper/data/config.yml
@@ -22,7 +22,7 @@ logging:
           level: INFO
           formatter: detailed
           filename: openaihelper.log
-          mode: w
+          mode: a
 
   loggers:
       openaihelper:
