--- a/openai-batch/openai_batch/data/config.yml
+++ b/openai-batch/openai_batch/data/config.yml
@@ -21,7 +21,7 @@ logging:
           class: logging.FileHandler
           level: INFO
           formatter: detailed
-          filename: openaihelper.log
+          filename: openai_batch.log
           mode: a
 
   loggers:
